--- a/components/course-card/course-card.module.scss
+++ b/components/course-card/course-card.module.scss
@@ -21,8 +21,9 @@
 }
 
 .img {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
+  max-height: 400px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
