--- a/pages/courses/course-page.module.scss
+++ b/pages/courses/course-page.module.scss
@@ -23,7 +23,7 @@ padding: 5px;
 }
 
 .img {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 610px;
   border-top-right-radius: 5px;
@@ -77,7 +77,6 @@ padding: 5px;
 
 .textarea {
   width: 400px;
-  min-height: 400px;
   background-color: white;
   color: #212121;
 }
